# KeaEngine

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
assets/shaders/: basic.frag  basic.vert
engine/: CMakeLists.txt
engine/include/Engine/: Engine.hpp  Input.hpp  KeyCodes.hpp  MouseButtons.hpp  Window.hpp
engine/src/: Input.cpp  Window.cpp  dummy.cpp
src/Core/: CMakeLists.txt  Core.hpp  Log.cpp  Log.hpp  LogMacros.hpp
src/Engine/: Application.cpp  Application.hpp  CMakeLists.txt  Event.hpp  EventSystem.cpp  EventSystem.hpp  EventType.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Log.cpp  Log.hpp  Mesh.hpp  MouseButtons.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
src/Utils/: CMakeLists.txt  ObjLoader.cpp  ObjLoader.hpp  Utils.hpp
test/: main.cpp
tests/: CMakeLists.txt  main.cpp
